# ai-project-manager

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.yml  pyproject.toml  seed-db-script.py
.github/: PULL_REQUEST_TEMPLATE.md
app/: api.py
app/auth/: entities.py  routes.py  schemas.py  serializers.py
app/chat/: entities.py  routes.py  use_cases.py
app/companies/: models.py
app/factories/: db.py  logging.py
app/tasks/: entities.py  models.py  repositories.py  use_cases.py
app/users/: enums.py  models.py  repositories.py
backend/: Dockerfile  README.md  pyproject.toml  seed-db-script.py
backend/app/: api.py  config.py
backend/app/auth/: routes.py  schemas.py  use_cases.py
backend/app/chat/: routes.py  schemas.py  serializers.py  use_cases.py
backend/app/common/: entities.py  enums.py  routes.py  schemas.py  serializers.py  tasks.py  use_cases.py
backend/app/companies/: entities.py  repositories.py  schemas.py  serializers.py
backend/app/factories/: api.py  db.py
backend/app/health/: routes.py
backend/app/tasks/: entities.py  models.py  repositories.py  schemas.py  serializers.py
backend/app/users/: entities.py  models.py  repositories.py  schemas.py  serializers.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  App.tsx  api.ts  constants.js  constants.ts  main.tsx  theme.tsx  types.tsx  utils.ts
frontend/src/components/: AuthComponent.tsx  Chats.Tab.tsx  ChatsTab.tsx  LoginComponent.jsx  MainPage.tsx  Tasks.Tab.jsx  (+3 more)
(+3 files in other folders)
