[tool.poetry]
name = "ai-project-management"
version = "0.1.0"
description = "Project Management made easy using AI"
authors = ["Rohan Baisantry"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
fastapi = "^0.110.0"
jinja2 = "^3.1.3"
python-dotenv = "^1.0.1"
uvicorn = "^0.28.0"
beanie = "^1.25.0"
openai = "^1.14.1"
structlog = "^24.1.0"
requests = "^2.31.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
gunicorn = "^21.2.0"


[tool.poetry.group.development.dependencies]
isort = "^5.13.2"
black = "^24.3.0"
pre-commit = "^3.6.2"
aioconsole = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
